--- a/amigo.yml
+++ b/amigo.yml
@@ -271,5 +271,6 @@ dependencies:
       - mplcursors==0.5.3
       - pyparsing==3.1.1
       - python-gdcm==3.0.24.1
+      - typing-extensions==4.14.0
       - vtk==9.2.6
 prefix: C:\Users\gabriel.paivafonseca\AppData\Local\anaconda3\envs\amigo
