--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,32 +13,45 @@ build_and_package:
     - shell
 
   before_script:
-    # 1) Update Conda itself
+    # Update Conda
     - >-
-      & "C:\ProgramData\Anaconda3\condabin\conda.bat" update -n base -c defaults conda --yes
+      & "C:\ProgramData\Anaconda3\condabin\conda.bat"
+        update -n base -c defaults conda --yes
 
-    # 2) Remove any stale environment folder so create will always work
+    # Remove old env, then recreate
     - >-
-      Remove-Item -Recurse -Force "C:\ProgramData\Anaconda3\envs\$Env:CONDA_ENV" -ErrorAction SilentlyContinue
+      Remove-Item -Recurse -Force "C:\ProgramData\Anaconda3\envs\$Env:CONDA_ENV" `
+        -ErrorAction SilentlyContinue
+    - >-
+      & "C:\ProgramData\Anaconda3\condabin\conda.bat"
+        env create -f $Env:ENV_YML -n $Env:CONDA_ENV --quiet
 
-    # 3) Create a fresh "amigo" environment from amigo.yml
+    # Ensure our persistent artifact folder exists
     - >-
-      & "C:\ProgramData\Anaconda3\condabin\conda.bat" env create -f $Env:ENV_YML -n $Env:CONDA_ENV --quiet
+      if (!(Test-Path 'C:\ci-artifacts\amigopy')) {
+        New-Item -ItemType Directory -Path 'C:\ci-artifacts\amigopy' | Out-Null
+      }
 
   script:
-    # 4) Build your one-dir bundle with PyInstaller inside the "amigo" env
+    # Build with PyInstaller
     - >-
-      & "C:\ProgramData\Anaconda3\condabin\conda.bat" run -n $Env:CONDA_ENV pyinstaller Launch_ImGUI.spec
+      & "C:\ProgramData\Anaconda3\condabin\conda.bat"
+        run -n $Env:CONDA_ENV pyinstaller Launch_ImGUI.spec
 
-    # 5) Compile your installer with Inno Setup
+    # Package with Inno Setup
     - >-
       & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "compile.iss"
 
-    # 6) (Optional) List the Output folder to verify artifact name
-    - 'dir Output\'
+    # Copy the full dist/ and Output/ into a persistent folder
+    - >-
+      Copy-Item -Path dist -Destination 'C:\ci-artifacts\amigopy\dist' -Recurse -Force
+    - >-
+      Copy-Item -Path Output -Destination 'C:\ci-artifacts\amigopy\Output' -Recurse -Force
+
+    # (Optional) list the persistent folder so you can see it in the job log
+    - >-
+      dir C:\ci-artifacts\amigopy
 
   artifacts:
-    # Grab whatever .exe shows up under Output\
-    paths:
-      - Output/*.exe
-    expire_in: 1 week
+    # We no longer need GitLab to upload the installer (it’ll live on the runner)
+    when: never
