--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,34 +1,3 @@
-# .gitlab-ci.yml
-
-stages:
-  - build
-  - release
-
-variables:
-  # your conda env name and spec file
-  CONDA_ENV: amigo
-  ENV_YML: amigo.yml
-
-build_and_package:
-  stage: build
-  tags:
-    - shell
-  before_script:
-    # 1) Update Conda
-    - '& "C:\ProgramData\Anaconda3\condabin\conda.bat" update -n base -c defaults conda --yes'
-    # 2) Remove any stale env and recreate it
-    - 'Remove-Item -Recurse -Force "C:\ProgramData\Anaconda3\envs\$Env:CONDA_ENV" -ErrorAction SilentlyContinue'
-    - '& "C:\ProgramData\Anaconda3\condabin\conda.bat" env create -f $Env:ENV_YML -n $Env:CONDA_ENV --quiet'
-    # 3) Ensure persistent output directory
-    - 'if (!(Test-Path "C:\ci-artifacts\amigopy")) { New-Item -ItemType Directory -Path "C:\ci-artifacts\amigopy" | Out-Null }'
-  script:
-    # 4) Build your app (one‐dir bundle)
-    - '& "C:\ProgramData\Anaconda3\condabin\conda.bat" run -n amigo pyinstaller Launch_ImGUI.spec'
-    # 5) Produce the installer
-    - '& "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "compile.iss"'
-    # 6) Copy the installer into a persistent folder on the runner
-    - 'Copy-Item -Path "Output\mysetup.exe" -Destination "C:\ci-artifacts\amigopy\mysetup.exe" -Force'
-
 publish_release:
   stage: release
   tags:
@@ -37,16 +6,12 @@ publish_release:
     - job: build_and_package
       artifacts: false
   script:
-    # 1) Upload the signed installer via the uploads API
-    - |
-      $uploadJson = & curl.exe --silent `
-        --header "PRIVATE-TOKEN: $env:GITLAB_TOKEN" `
-        --upload-file "C:/ci-artifacts/amigopy/mysetup.exe" `
-        "$env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/uploads"
-      $upload = $uploadJson | ConvertFrom-Json
-      $uploadedUrl = "$env:CI_PROJECT_URL$($upload.url)"
+    # 1) Upload the installer and capture the JSON response
+    - '$uploadJson = & curl.exe --silent --header "PRIVATE-TOKEN: $env:GITLAB_TOKEN" --form "file=@C:/ci-artifacts/amigopy/mysetup.exe" "$env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/uploads"'
+    - '$upload = $uploadJson | ConvertFrom-Json'
+    - '$uploadedUrl = "$env:CI_PROJECT_URL$($upload.url)"'
 
-    # 2) Create or update a nightly release asset
+    # 2) Build the Release payload
     - |
       $body = @{
         name        = "nightly-$env:CI_PIPELINE_IID"
@@ -56,9 +21,7 @@ publish_release:
         assets      = @{ links = @(@{ name = "AMIGOpy Windows Installer"; url = $uploadedUrl }) }
       } | ConvertTo-Json -Depth 4
 
-      & curl.exe --silent --request POST `
-        --header "Content-Type: application/json" `
-        --header "PRIVATE-TOKEN: $env:GITLAB_TOKEN" `
-        --data "$body" `
-        "$env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/releases"
+    # 3) Create/update the Release with the uploaded asset
+    - '& curl.exe --silent --request POST --header "Content-Type: application/json" --header "PRIVATE-TOKEN: $env:GITLAB_TOKEN" --data $body "$env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/releases"'
+
   when: on_success
