--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,21 +27,15 @@ publish_release:
   tags:
     - shell
   needs:
-    - build_and_package
+    - job: build_and_package
       artifacts: false
   script:
-    # 1) Upload installer via the uploads API using -F
-    - |
-      $uploadJson = & curl.exe --silent `
-        --header "PRIVATE-TOKEN: $env:GITLAB_TOKEN" `
-        -F "file=@C:/ci-artifacts/amigopy/mysetup.exe" `
-        "$env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/uploads"
-    - 'Write-Host "UPLOAD RESPONSE: $uploadJson"'  # debug line
-    - |
-      $upload = $uploadJson | ConvertFrom-Json
-      $uploadedUrl = "$env:CI_PROJECT_URL$($upload.url)"
-
-    # 2) Create or update the nightly release asset
+    # 1) upload via uploads API
+    - '$uploadJson = & curl.exe --silent --header "PRIVATE-TOKEN: $env:GITLAB_TOKEN" -F "file=@C:/ci-artifacts/amigopy/mysetup.exe" "$env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/uploads"'
+    - 'Write-Host "Upload response: $uploadJson"'
+    - '$upload = $uploadJson | ConvertFrom-Json'
+    - '$uploadedUrl = "$env:CI_PROJECT_URL$($upload.url)"'
+    # 2) create or update the nightly release
     - |
       $body = @{
         name        = "nightly-$env:CI_PIPELINE_IID"
@@ -50,11 +44,5 @@ publish_release:
         released_at = (Get-Date).ToString("o")
         assets      = @{ links = @(@{ name = "AMIGOpy Windows Installer"; url = $uploadedUrl }) }
       } | ConvertTo-Json -Depth 4
-
-    - |
-      & curl.exe --silent --request POST `
-        --header "Content-Type: application/json" `
-        --header "PRIVATE-TOKEN: $env:GITLAB_TOKEN" `
-        --data "$body" `
-        "$env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/releases"
+    - '& curl.exe --silent --request POST --header "Content-Type: application/json" --header "PRIVATE-TOKEN: $env:GITLAB_TOKEN" --data $body "$env:CI_API_V4_URL/projects/$env:CI_PROJECT_ID/releases"'
   when: on_success
